Refactor holiday search implementation and improve criteria handling